[project]
name = "comfyui-ljnodes"
description = "A variety of custom nodes to enhance ComfyUI for a buttery smooth experience."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/coolzilj/ComfyUI-LJNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LJNodes"
Icon = ""
